--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "simplebooknotes",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A simple book notes application",
+  "main": "frontend/frontend.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+"scripts": {
+    "start:frontend": "node frontend/frontend.js",
+    "start:backend": "node backend/backend.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Connor",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "pg": "^8.13.1"
   }
 }
